...
                ForEach(Vinyl.Speed.allCases) { speed in
                    Text(speed.title)
                        .tag(speed)
                }
            }
            //            .pickerStyle(.segmented)
            TextField("Album name", text: $albumName)
            TextField("Artist name", text: $artistName)
            Toggle("Is Scratched", isOn: $scratched)
            DatePicker(selection: $releaseDate) {
                Text("Release Date")
            }
            if scratched {
...
